// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactionPicker /> snapshot should match snapshot 1`] = `
<ReactionPicker>
  <ButtonGroup
    className="md-reaction-picker-wrapper"
    round={true}
  >
    <div
      className="md-button-group-wrapper md-reaction-picker-wrapper"
      data-compressed={false}
      data-round={true}
      data-spaced={false}
    />
  </ButtonGroup>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with children 1`] = `
<ReactionPicker>
  <ButtonGroup
    className="md-reaction-picker-wrapper"
    round={true}
  >
    <div
      className="md-button-group-wrapper md-reaction-picker-wrapper"
      data-compressed={false}
      data-round={true}
      data-spaced={false}
    >
      <ReactionButton>
        <ButtonCircle
          className="md-reaction-button-wrapper"
          data-reacted={false}
          size={32}
        >
          <ButtonSimple
            aria-pressed={false}
            className="md-button-circle-wrapper md-reaction-button-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-reacted={false}
            data-selected={false}
            data-size={32}
            onClick={[Function]}
            onDragStart={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <FocusRing>
              <FocusRing
                focusClass="md-focus-ring-wrapper children"
                focusRingClass="md-focus-ring-wrapper children"
              >
                <button
                  aria-pressed={false}
                  className="md-button-circle-wrapper md-reaction-button-wrapper md-button-simple-wrapper"
                  data-color="primary"
                  data-disabled={false}
                  data-ghost={false}
                  data-multiple-children={false}
                  data-outline={false}
                  data-reacted={false}
                  data-selected={false}
                  data-size={32}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onDragStart={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  type="button"
                />
              </FocusRing>
            </FocusRing>
          </ButtonSimple>
        </ButtonCircle>
      </ReactionButton>
    </div>
  </ButtonGroup>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with className 1`] = `
<ReactionPicker
  className="example-class"
>
  <ButtonGroup
    className="example-class md-reaction-picker-wrapper"
    round={true}
  >
    <div
      className="md-button-group-wrapper example-class md-reaction-picker-wrapper"
      data-compressed={false}
      data-round={true}
      data-spaced={false}
    />
  </ButtonGroup>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with id 1`] = `
<ReactionPicker
  id="example-id"
>
  <ButtonGroup
    className="md-reaction-picker-wrapper"
    id="example-id"
    round={true}
  >
    <div
      className="md-button-group-wrapper md-reaction-picker-wrapper"
      data-compressed={false}
      data-round={true}
      data-spaced={false}
      id="example-id"
    />
  </ButtonGroup>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with style 1`] = `
<ReactionPicker
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonGroup
    className="md-reaction-picker-wrapper"
    round={true}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <div
      className="md-button-group-wrapper md-reaction-picker-wrapper"
      data-compressed={false}
      data-round={true}
      data-spaced={false}
      style={
        Object {
          "color": "pink",
        }
      }
    />
  </ButtonGroup>
</ReactionPicker>
`;
